# open-webui

./: .Makefile.swp  .actrc  .bandit.yaml  .build-trigger  .claudeignore  .config.example  .cursorignore  .deploy-trigger  .dockerignore  .en.local  .env  .env.dev.example  .env.enterprise.example  .env.example  .env.litellm.production  .env.openwebui.development  .env.openwebui.production  .env.rm.example  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .gitmodules  .litellm.env  .npmrc  .nvmrc  .nycrc  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .secrets.baseline  .slugignore  .tool-versions  .trufflehog.yaml  .uvignore  .webui_secret_key  .windsurfrules  504_RETRY_FIX.md  ABOUT.md  (+675 more)
backend/: .dockerignore  .gitignore  .python-version  .requirements_installed  Dockerfile  Dockerfile.nbp  MODEL_VISIBILITY_ISSUE_REPORT.md  MS_SQL_SERVER_MIGRATION.md  OPENROUTER_REFACTORING_REPORT.md  PHASE2_ENV_VERIFICATION_REPORT.md  PHASE2_INTEGRATION_FLOW.md  PHASE4_5_PRODUCTION_READY_REPORT.md  PHASE_1_5_FILES_TO_DELETE.md  PHASE_2_BATCH_CONSOLIDATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  README_DATABASE.md  REFACTORING_SAFETY_ANALYSIS.md  REFACTORING_SUCCESS_REPORT.md  Readme.md  SADM-Simulation.py  TESTING_GUIDE.md  USAGE_CAPTURE_FAILURE_INVESTIGATION_REPORT.md  add_model_config.py  alembic.ini  check_billing_logs.py  check_dependencies.py  clean_other_database.py  cleanup_phase_files.py  cleanup_preset_models.py  clear_db.py  clear_usage_database.py  config.py  config.yaml.example  constants.py  container_debug_results.json  create_batch_tracking_tables.py  crew_mcp_integration.py  custom_resource_loader.py  database_investigation_20250729_133128.json  (+131 more)
backend/DB-Migration-ACP-3780/: README.md  check_database_schema.py  check_odbc_drivers.py  dev-openwebui-schema.sqlserver.sql  import_data_to_mssql.py  資料庫遷移標準作業程序 (SOP).md
backend/answerai/: __init__.py  config.py  env.py  functions.py  main.py  tasks.py
backend/backend/: ORGANIZATION_INDEXES_PERFORMANCE_REPORT.md  PHASE2_AUTOMATIC_INITIALIZATION_REPORT.md  PHASE3_SECURITY_TRANSACTION_REPORT.md  migrate_to_organizations.py  monitor_organization_performance.py
backend/beyond_the_loop/: dev.sh
backend/data/: config.json  model_struct.json  readme.txt  webui.db
backend/docs/: batch-processing-time-change.md  batch_processor_refactoring_summary.md  enhanced_usage_calculation_refactoring.md  month_total_fixes_summary.md
backend/feddersen/: config.py  models.py
backend/functions/: better-agent.json  installation.py
backend/godaddy/: README.md  __init__.py  active_directory.py  auth_extension.py  config.py  oauth_extension.py
backend/mcp_backend/: __init__.py
backend/migrations/: env.py  script.py.mako  util.py
backend/open_webui/: CHANGELOG.md  README_IAM_DB.md  __init__.py  alembic.ini  celery_worker.py  check_city_column.py  conda  config.py  conftest.py  constants.py  custom_logging.py  data_cleanup_task.py  env.py  env.py.bak  events.py  exceptions.py  functions.py  index.html.2  instrumentation.py  main.py  mcp_manager.py  middleware.py  scheduler.py  settings.py  show_thought_chain.py  tasks.py  tasks_celery.py
backend/phase_cleanup_backup_20250729_234433/: add_organization_indexes.py  patch_organization_model_access.py  patch_usage_tracking_init.py  register_openrouter_models.py  secure_models_patch.py
backend/pipe-functions/: React_agent_function_use_openapi_tools.py
backend/privacy_proxy/: Dockerfile  docker-compose.yml  requirements.txt
backend/scripts/: comprehensive_cleanup.py  fast_cronjob_simulator.py  fix_missing_cleanup_log_table.py  full_database_cleanup.py  inspect_child_data.py  k8s_vector_cleanup.py  migrate_add_timezone_field.py  migrate_files_to_pgvector.md  migrate_files_to_pgvector.py  test_cost_calculation.py  test_month_total.py  test_month_total_fixes.py  test_vector_cleanup_api.py  validate_month_total_issues.py  validate_usage_tracking_fixes.py
backend/space/: litellm_config.yaml
backend/test/: test_aiohttp_stream_idle_timeout.py
backend/tests/: CLAUDE.md  README.md  check_import.py  conftest.py  pytest.ini  requirements-test.txt  run_e2e_tests.py  test.sh  test_audio_chunk_order.py  test_automation_completion.py  test_calculate_markup_cost.py  test_chat_history.py  test_chat_messages.py  test_chat_storage.py  test_context_compaction.py  test_context_compaction_middleware.py  test_docling_page_extraction.py  test_dynamic_pricing.py  test_encryption_shim.py  test_integrity_lock.py  test_knowledge_fs_grep.py  test_message_content_from_output.py  test_message_output_context.py  test_middleware_empty_assistant_messages.py  test_middleware_message_files.py  test_model_params_payload.py  test_note_tool_sync.py  test_openai_forward_chat_id.py  test_openrouter_webhook_endpoint.py  test_paddleocr_loader_selection.py  test_playwright_loader_cleanup.py  test_profiles.py  test_search1api.py  test_settings.py  test_socket_cleanup.py  test_subscription_billing.py  test_supervision_signature.py  test_usage_limits.py  test_usage_processing_e2e.py  test_usage_processing_e2e_refined.py  (+5 more)
backend/tool_related_info/: Guide_To_Use_OpenAPI_Tool_Server.md  How_To_Debug_Backend.md  Tool_Call_Prompt_Info.md  Tool_Call_Prompt_Info_In_Debug_Mode.md  accessing-tools-in-pipe-functions.md  example_params['__tools__'].py  example_params['body']['messages'][0]_content.json  example_params_tool_hello_post.py  example_payload_variable_content_both_client_and_server_tool.json  example_payload_variable_content_port8000Servertool_and_port8001ClientTool.json  example_payload_variable_content_server_tool.json  function_param_info.md  openwebui_react_agent_function.py  tool-endpoint-api-key-integration.md  確定tool_discovery會議紀錄.md
backend/utils/: avatar.py  misc.py  models.py  path.py  reset_password.py  schemas.py  task.py  tools.py  utils.py  webhook.py
backend/vectorstore/: __init__.py  factory.py  qdrant_store.py  test_vectorstore.py  vector_store.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/resources/: README.md
src-tauri/src/: lib.rs
(+9911 files in other folders)
