[project]
name = "open-webui"
description = "Open WebUI"
authors = [
    { name = "Timothy Jaeryang Baek", email = "tim@openwebui.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "accelerate>=1.13.0",
    "aiocache>=0.12.3",
    "aiofiles>=25.1.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.5",
    "aiosignal>=1.4.0",
    "alabaster>=1.0.0",
    "alembic>=1.18.4",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anthropic>=0.88.0",
    "anyio>=4.13.0",
    "APScheduler>=3.11.2",
    "argon2-cffi>=25.1.0",
    "argon2-cffi-bindings>=25.1.0",
    "args>=0.1.0",
    "asgiref>=3.11.1",
    "async-timeout>=5.0.1",
    "attrs>=23.2.0",
    "Authlib>=1.6.9",
    "Automat>=22.10.0",
    "av>=17.0.0",
    "azure-ai-documentintelligence>=1.0.2",
    "azure-core>=1.39.0",
    "azure-identity>=1.25.3",
    "azure-storage-blob>=12.28.0",
    "babel>=2.18.0",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "bidict>=0.23.1",
    "black>=26.3.1",
    "blinker>=1.7.0",
    "boto3>=1.34.46",
    "botocore>=1.34.46",
    "Brlapi>=0.8.5",
    "brotli>=1.2.0",
    "build>=1.4.2",
    "certifi>=2026.2.25",
    "cffi>=2.0.0",
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.6",
    "chromadb>=1.5.5",
    "click>=8.3.1",
    "cmake>=4.3.1",
    "colorama>=0.4.6",
    "configobj>=5.0.8",
    "constantly>=23.10.4",
    "coverage>=7.13.5",
    "cryptography>=41.0.7",
    "ctranslate2>=4.7.1",
    "cuda-bindings>=13.2.0",
    "cuda-pathfinder>=1.5.0",
    "cuda-python>=13.2.0",
    "cuda-toolkit>=13.0.2",
    "Cython>=3.2.4",
    "dataclasses-json>=0.6.7",
    "ddgs>=9.12.0",
    "defer>=1.0.6",
    "defusedxml>=0.7.1",
    "distro>=1.9.0",
    "dnspython>=2.6.1",
    "docstring_parser>=0.17.0",
    "docutils>=0.22.4",
    "docx2txt>=0.9",
    "durationpy>=0.10",
    "ecdsa>=0.19.2",
    "einops>=0.8.2",
    "et_xmlfile>=2.0.0",
    "Events>=0.5",
    "fake-useragent>=2.2.0",
    "fastapi>=0.135.3",
    "fasteners>=0.18",
    "faster-whisper>=1.2.1",
    "filelock>=3.25.2",
    "flatbuffers>=25.12.19",
    "fonttools>=4.62.1",
    "fpdf2>=2.8.7",
    "freetype-py>=2.4.0",
    "frozenlist>=1.8.0",
    "fsspec>=2026.3.0",
    "ftfy>=6.3.1",
    "google-api-core>=2.30.1",
    "google-api-python-client>=2.193.0",
    "google-auth>=2.49.1",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "google-cloud-core>=2.5.1",
    "google-cloud-storage>=3.10.1",
    "google-crc32c>=1.8.0",
    "google-genai>=1.70.0",
    "google-resumable-media>=2.8.2",
    "googleapis-common-protos>=1.73.1",
    "greenlet>=3.3.2",
    "grpcio>=1.80.0",
    "h11>=0.16.0",
    "hf-xet>=1.4.3",
    "httpcore>=1.0.9",
    "httplib2>=0.20.4",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "huggingface_hub>=1.8.0",
    "hyperlink>=21.0.0",
    "idna>=3.6",
    "imagesize>=2.0.0",
    "importlib_metadata>=8.7.1",
    "importlib_resources>=6.5.2",
    "incremental>=22.10.0",
    "iniconfig>=2.3.0",
    "isodate>=0.7.2",
    "itsdangerous>=2.2.0",
    "Jinja2>=3.1.2",
    "jiter>=0.13.0",
    "jmespath>=1.0.1",
    "joblib>=1.5.3",
    "jsonpatch>=1.33",
    "jsonpointer>=2.0",
    "jsonschema>=4.26.0",
    "jsonschema-specifications>=2025.9.1",
    "kubernetes>=35.0.0",
    "langchain>=1.2.14",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.24",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.4",
    "langgraph-checkpoint>=4.0.1",
    "langgraph-prebuilt>=1.0.8",
    "langgraph-sdk>=0.3.12",
    "langsmith>=0.7.24",
    "lazr.restfulclient>=0.14.6",
    "lazr.uri>=1.0.6",
    "ldap3>=2.9.1",
    "librmm-cu13>=26.6.0a26",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "Mako>=1.3.2.dev0",
    "mamba>=0.11.3",
    "Markdown>=3.10.2",
    "markdown-it-py>=3.0.0",
    "MarkupSafe>=2.1.5",
    "marshmallow>=3.26.2",
    "mcp>=1.19.0",
    "mdurl>=0.1.2",
    "mmh3>=5.2.1",
    "mpmath>=1.3.0",
    "msal>=1.35.1",
    "msal-extensions>=1.3.1",
    "msoffcrypto-tool>=6.0.0",
    "multidict>=6.7.1",
    "mypy_extensions>=1.1.0",
    "networkx>=3.6.1",
    "ninja>=1.13.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "nvidia-cublas>=13.1.0.3",
    "nvidia-cuda-cupti>=13.0.85",
    "nvidia-cuda-nvrtc>=13.0.88",
    "nvidia-cuda-runtime>=13.0.96",
    "nvidia-cudnn-cu13>=9.19.0.56",
    "nvidia-cufft>=12.0.0.61",
    "nvidia-cufile>=1.15.1.6",
    "nvidia-curand>=10.4.0.35",
    "nvidia-cusolver>=12.0.4.66",
    "nvidia-cusparse>=12.6.3.3",
    "nvidia-cusparselt-cu13>=0.8.0",
    "nvidia-nccl-cu13>=2.28.9",
    "nvidia-nvjitlink>=13.0.88",
    "nvidia-nvshmem-cu13>=3.4.5",
    "nvidia-nvtx>=13.0.85",
    "oauthlib>=3.2.2",
    "olefile>=0.46",
    "onnxruntime>=1.24.4",
    "openai>=2.30.0",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.92",
    "openpyxl>=3.1.5",
    "opensearch-protobufs>=0.19.0",
    "opensearch-py>=3.1.0",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp-proto-common>=1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-proto>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-semantic-conventions>=0.61b0",
    "orjson>=3.11.8",
    "ormsgpack>=1.12.2",
    "overrides>=7.7.0",
    "packaging>=24.0",
    "pandas>=3.0.2",
    "paramiko>=2.12.0",
    "pathspec>=1.0.4",
    "peewee>=4.0.3",
    "peewee-migrate>=1.15.0",
    "pexpect>=4.9.0",
    "pillow>=10.2.0",
    "pip-chill>=1.0.5",
    "pip-tools>=7.5.3",
    "platformdirs>=4.9.4",
    "pluggy>=1.6.0",
    "primp>=1.2.1",
    "propcache>=0.4.1",
    "proto-plus>=1.27.2",
    "protobuf>=6.33.6",
    "psutil>=5.9.8",
    "ptyprocess>=0.7.0",
    "pyarrow>=23.0.1",
    "pyasn1>=0.6.3",
    "pyasn1-modules>=0.2.8",
    "pybase64>=1.4.3",
    "pycairo>=1.25.1",
    "pyclipper>=1.4.0",
    "pycparser>=3.0",
    "pycrdt>=0.12.50",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pydantic_core>=2.41.5",
    "pydub>=0.25.1",
    "Pygments>=2.17.2",
    "PyGObject>=3.48.2",
    "PyHamcrest>=2.1.0",
    "PyJWT>=2.7.0",
    "pymdown-extensions>=10.21.2",
    "PyMySQL>=1.1.2",
    "PyNaCl>=1.5.0",
    "pypandoc>=1.17",
    "pyparsing>=3.1.1",
    "pypdf>=6.9.2",
    "PyPika>=0.51.1",
    "pyproject_hooks>=1.2.0",
    "pyrsistent>=0.20.0",
    "pyserial>=3.5",
    "pytest>=9.0.2",
    "python-dateutil>=2.8.2",
    "python-debian>=0.1.49",
    "python-dotenv>=1.2.2",
    "python-engineio>=4.13.1",
    "python-jose>=3.5.0",
    "python-magic>=0.4.27",
    "python-mimeparse>=2.0.0",
    "python-multipart>=0.0.22",
    "python-pptx>=1.0.2",
    "python-socketio>=5.16.1",
    "pytokens>=0.4.1",
    "pytube>=15.0.0",
    "pytz>=2024.1",
    "pyxlsb>=1.0.10",
    "PyYAML>=6.0.1",
    "rank-bm25>=0.2.2",
    "rapidocr-onnxruntime>=1.2.3",
    "redis>=7.4.0",
    "referencing>=0.37.0",
    "regex>=2026.3.32",
    "requests>=2.33.1",
    "requests-oauthlib>=2.0.0",
    "requests-toolbelt>=1.0.0",
    "RestrictedPython>=8.1",
    "rich>=13.7.1",
    "rlPyCairo>=0.3.0",
    "roman-numerals>=4.1.0",
    "rpds-py>=0.30.0",
    "rsa>=4.9.1",
    "s3transfer>=0.10.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scikit_build_core>=0.12.2",
    "scipy>=1.17.1",
    "sentence-transformers>=5.3.0",
    "sentencepiece>=0.2.1",
    "service-identity>=24.1.0",
    "setuptools>=68.1.2",
    "shapely>=2.1.2",
    "shellingham>=1.5.4",
    "simple-websocket>=1.1.0",
    "six>=1.16.0",
    "sniffio>=1.3.1",
    "snowballstemmer>=3.0.1",
    "soundfile>=0.13.1",
    "soupsieve>=2.8.3",
    "Sphinx>=9.1.0",
    "sphinxcontrib-applehelp>=2.0.0",
    "sphinxcontrib-devhelp>=2.0.0",
    "sphinxcontrib-htmlhelp>=2.1.0",
    "sphinxcontrib-jsmath>=1.0.1",
    "sphinxcontrib-qthelp>=2.0.0",
    "sphinxcontrib-serializinghtml>=2.0.0",
    "SQLAlchemy>=2.0.48",
    "sse-starlette>=3.3.4",
    "starlette>=1.0.0",
    "starlette-compress>=1.7.0",
    "starsessions>=2.2.1",
    "sympy>=1.14.0",
    "tenacity>=9.1.4",
    "threadpoolctl>=3.6.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "tomlkit>=0.14.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.4.0",
    "triton>=3.6.0",
    "Twisted>=24.3.0",
    "typer>=0.24.1",
    "typing-inspect>=0.9.0",
    "typing-inspection>=0.4.2",
    "typing_extensions>=4.15.0",
    "tzlocal>=5.3.1",
    "uritemplate>=4.2.0",
    "urllib3>=2.0.7",
    "uuid_utils>=0.14.1",
    "uv>=0.11.3",
    "uvicorn>=0.42.0",
    "uvloop>=0.22.1",
    "validators>=0.35.0",
    "wadllib>=1.3.6",
    "watchfiles>=1.1.1",
    "wcwidth>=0.6.0",
    "websocket-client>=1.9.0",
    "websockets>=16.0",
    "wheel>=0.42.0",
    "wsproto>=1.3.2",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.9",
    "xxhash>=3.6.0",
    "yarl>=1.23.0",
    "youtube-transcript-api>=1.2.4",
    "zipp>=3.23.0",
    "zope.interface>=6.1",
    "zstandard>=0.25.0",
]
readme = "README.md"
requires-python = ">=3.14.3"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.4.2",
]
mariadb = [
    "mariadb>=1.1.14",
]
unstructured = [
    "unstructured>=0.18.31",
]
database = [
    "pymongo>=4.16.0",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.4.2",
    "PyMySQL>=1.1.2",
    "boto3>=1.34.46",
    "pymilvus>=2.6.9",
    "qdrant-client>=1.17.0",
    "elasticsearch>=9.3.0",
    "pinecone>=6.0.2",
    "oracledb>=3.4.2",
]
all = [
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.4.2",
    "unstructured>=0.18.31",
    "pymongo>=4.16.0",
    "PyMySQL>=1.1.2",
    "boto3>=1.34.46",
    "pymilvus>=2.6.9",
    "qdrant-client>=1.17.0",
    "elasticsearch>=9.3.0",
    "pinecone>=6.0.2",
    "oracledb>=3.4.2",
]

[project.scripts]
open-webui = "open_webui:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "coverage>=7.13.5",
    "black>=26.3.1",
    "ruff>=0.15.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "package.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[tool.hatch.build.hooks.custom]  # keep this for reading hooks from `hatch_build.py`

[tool.hatch.build.targets.wheel]
sources = ["backend"]
exclude = [
    ".dockerignore",
    ".gitignore",
    ".webui_secret_key",
    "dev.sh",
    "requirements.txt",
    "start.sh",
    "start_windows.bat",
    "webui.db",
    "chroma.sqlite3",
]
force-include = { "CHANGELOG.md" = "open_webui/CHANGELOG.md", build = "open_webui/frontend" }

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.svg,package-lock.json,i18n,*.lock,*.css,*-bundle.js,locales,example-doc.txt,emoji-shortcodes.json'
check-hidden = true
# ignore-regex = ''
ignore-words-list = 'ans'

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "coverage>=7.13.5",
    "black>=26.3.1",
    "ruff>=0.15.5",
    "pip-tools>=7.5.3",
]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
docstring-code-format = false

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "W",    # pycodestyle warnings
  "I",    # isort
  "UP",   # pyupgrade
  "C90",  # mccabe
  "Q",    # flake8-quotes
  "ICN",  # flake8-import-conventions
]

# Plugin configs:
flake8-import-conventions.banned-from = [ "ast", "datetime" ]
flake8-import-conventions.aliases = { datetime = "dt" }
flake8-quotes.inline-quotes = "single"
mccabe.max-complexity = 10
pydocstyle.convention = "google"
