[project]
name = "open-webui"
version = "0.6.34"
description = "Open WebUI Backend - Python FastAPI server"
requires-python = ">= 3.11, < 3.14"
dependencies = [
    # Python 3.13+ Compatibility
    "audioop-lts>=0.2.1; python_version >= '3.13'",  # Drop-in replacement for removed audioop module

    # Web Framework & Server
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.20",
    "itsdangerous>=2.2.0",

    # WebSocket & Real-time Communication
    "python-socketio>=5.13.0",

    # Authentication & Security
    "python-jose>=3.4.0",
    "cryptography",
    "bcrypt>=5.0.0",
    "argon2-cffi>=25.1.0",
    "PyJWT[crypto]>=2.10.1",
    "authlib>=1.6.5",

    # HTTP & Async I/O
    "requests>=2.32.5",
    "aiohttp>=3.12.15",
    "async-timeout",
    "aiocache",
    "aiofiles",
    "starlette-compress>=1.6.0",
    "httpx[socks,http2,zstd,cli,brotli]>=0.28.1",
    "starsessions[redis]>=2.2.1",

    # Database & ORM
    "sqlalchemy>=2.0.38",
    "alembic>=1.14.0",
    "peewee>=3.18.1",
    "peewee-migrate>=1.12.2",
    "PyMySQL>=1.1.1",

    # Storage & Caching
    "pycrdt>=0.12.25",
    "redis",
    "boto3>=1.40.5",

    # Task Scheduling & Execution
    "APScheduler>=3.10.4",
    "RestrictedPython>=8.0",

    # Logging & Utilities
    "loguru>=0.7.3",
    "asgiref>=3.8.1",

    # AI & LLM Core
    "tiktoken",
    "mcp>=1.14.1",

    # AI Provider SDKs
    "openai",
    "anthropic",
    "google-genai>=1.38.0",
    "google-generativeai>=0.8.5",

    # LangChain Framework
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",

    # Vector Stores & Search
    "fake-useragent>=2.2.0",
    "chromadb>=1.1.0",
    "opensearch-py>=2.8.0",

    # ML & Transformers
    "transformers",
    "sentence-transformers>=5.1.1",
    "accelerate",
    "pyarrow>=20.0.0",
    "einops>=0.8.1",

    # Document Processing
    "ftfy>=6.2.3",
    "pypdf>=6.0.0",
    "fpdf2>=2.8.2",
    "pymdown-extensions>=10.14.2",
    "docx2txt>=0.8",
    "python-pptx>=1.0.2",
    "unstructured>=0.16.17",
    "nltk>=3.9.1",
    "Markdown>=3.9",
    "pypandoc>=1.15",

    # Data Processing
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "pyxlsb>=1.0.10",
    "xlrd>=2.0.1",
    "validators>=0.35.0",
    "psutil",
    "sentencepiece",

    # Media Processing
    "soundfile>=0.13.1",
    "pillow>=11.3.0",
    "opencv-python-headless>=4.11.0.86",
    "rapidocr-onnxruntime>=1.4.4",
    "pydub",
    "av>=14.0.1",

    # OCR & Document Intelligence
    "azure-ai-documentintelligence>=1.0.2",
    "rank-bm25>=0.2.2",

    # Speech & Audio
    "onnxruntime>=1.20.1",
    "faster-whisper>=1.1.1",

    # Utilities & Formatters
    "black>=25.9.0",

    # Media Downloaders
    "youtube-transcript-api>=1.2.2",
    "pytube>=15.0.0",
    "ddgs>=9.0.0",

    # Google Drive Integration
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "googleapis-common-protos>=1.70.0",
    "google-cloud-storage>=2.19.0",

    # Azure Storage
    "azure-identity>=1.25.0",
    "azure-storage-blob>=12.24.1",

    # LDAP
    "ldap3>=2.9.1",
]

[project.optional-dependencies]
# PostgreSQL Support
postgres = [
    "psycopg2-binary==2.9.10",
    "pgvector==0.4.1",
]

# MongoDB Support
mongodb = [
    "pymongo",
]

# Vector Databases
vectordb = [
    "qdrant-client==1.14.3",
    "pymilvus==2.6.2",
    "pinecone==6.0.2",
]

# Additional Search Engines
search = [
    "elasticsearch==9.1.0",
    "oracledb==3.2.0",
]

# Advanced RAG
rag-advanced = [
    "colbert-ai==0.2.21",
]

# Web Scraping
web-scraping = [
    "firecrawl-py==1.12.0",
]

# Observability & Tracing
observability = [
    "opentelemetry-api==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-exporter-otlp==1.37.0",
    "opentelemetry-instrumentation==0.58b0",
    "opentelemetry-instrumentation-fastapi==0.58b0",
    "opentelemetry-instrumentation-sqlalchemy==0.58b0",
    "opentelemetry-instrumentation-redis==0.58b0",
    "opentelemetry-instrumentation-requests==0.58b0",
    "opentelemetry-instrumentation-logging==0.58b0",
    "opentelemetry-instrumentation-httpx==0.58b0",
    "opentelemetry-instrumentation-aiohttp-client==0.58b0",
]

# Testing & Development
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-docker~=3.1.1",
    "docker~=7.1.0",
    "playwright==1.49.1",
]

# Cloud Storage Emulators for Testing
test-emulators = [
    "moto[s3]>=5.0.26",
    "gcp-storage-emulator>=2024.8.3",
]

# Tencent Cloud
tencent = [
    "tencentcloud-sdk-python==3.0.1336",
]

# All optional dependencies combined
all = [
    "pymongo",
    "psycopg2-binary==2.9.10",
    "pgvector==0.4.1",
    "qdrant-client==1.14.3",
    "pymilvus==2.6.2",
    "pinecone==6.0.2",
    "elasticsearch==9.1.0",
    "oracledb==3.2.0",
    "colbert-ai==0.2.21",
    "firecrawl-py==1.12.0",
    "tencentcloud-sdk-python==3.0.1336",
    "opentelemetry-api==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-exporter-otlp==1.37.0",
    "opentelemetry-instrumentation==0.58b0",
    "opentelemetry-instrumentation-fastapi==0.58b0",
    "opentelemetry-instrumentation-sqlalchemy==0.58b0",
    "opentelemetry-instrumentation-redis==0.58b0",
    "opentelemetry-instrumentation-requests==0.58b0",
    "opentelemetry-instrumentation-logging==0.58b0",
    "opentelemetry-instrumentation-httpx==0.58b0",
    "opentelemetry-instrumentation-aiohttp-client==0.58b0",
    "pytest>=8.4.1",
    "pytest-docker~=3.1.1",
    "docker~=7.1.0",
    "playwright==1.49.1",
    "moto[s3]>=5.0.26",
    "gcp-storage-emulator>=2024.8.3",
]

[project.scripts]
open-webui = "open_webui:app"

[build-system]
# Using uv_build - Astral's native build backend
# Pure UV stack: fast, minimal, and fully integrated
# Note: Frontend must be built separately before packaging
build-backend = "uv_build"
requires = ["uv_build>=0.8.22,<0.9.0"]

[tool.uv.build-backend]
# Configure uv_build for src-layout structure
module-root = "."

[tool.hatch.build.targets.wheel]
sources = ["."]
exclude = [
    ".dockerignore",
    ".gitignore",
    ".webui_secret_key",
    "dev.sh",
    "dev.ps1",
    "requirements.txt",
    "start.sh",
    "start_windows.bat",
    "webui.db",
    "chroma.sqlite3",
]

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.svg,package-lock.json,i18n,*.lock,*.css,*-bundle.js,locales,example-doc.txt,emoji-shortcodes.json'
check-hidden = true
# ignore-regex = ''
ignore-words-list = 'ans'

# Ruff configuration for linting and formatting
# https://docs.astral.sh/ruff/
[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
    ".venv",
    "venv",
    "migrations",
    "__pycache__",
    "*.egg-info",
    ".git",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Type checking with mypy
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true when ready for strict typing
ignore_missing_imports = true


# UV-specific dependency groups (PEP 735)
# Use: `uv sync --group <group-name>` to install specific groups
[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
    "ruff>=0.8.0",  # Formatter and linter
    "mypy>=1.10.0",  # Type checker
]

# For local development with all features
dev-full = [
    { include-group = "dev" },
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
]

